added reviews API documentation
